# studies_material

./: .gitignore  README.md
C/: Chooser.cpp  Insertion_Sorter.cpp  Organizer.cpp  PalletsProblem.cpp  Sorter.cpp  queue (committed).h  queue.h  queue.h.gch  queue_reverse.cpp  stack (committed).h  stack.h  stack.h.gch
C/Bibliotecas/: arquivo.h  arquivo.h.gch
C/Programas/: B_Tree_Program_Tester.c  Man_Binario.cpp  factorial_recursive.cpp  manipulação_de_arquivos.cpp
POO/Computer_Fabric/: .project
SQL/: SQL_Library_Database.sql
assembly/: factorial.asm  life_to_days.asm
codes/SQL/: BD2_test1_ DDL.sql  BD2_test1_DML.sql  CREATE OR REPLACE PROCEDURE SP_TEST.sql  insert_employer_procedure.sql  obj_creation_schema.sql  obje_creation_comp_schema.sql  object_creation_schema_DDL.sql  other_keys.sql  procedure_insert_log.sql  procedure_test.sql  schema_settlement.sql  sql_murder_mystery.sql  table_settlement_schema_DML.sql  teste_BD1_DDL.sql  teste_BD1_DML.sql
codes/assembly_x86/: num_sum.asm
codes/shellscript/: arg_arq_creation.sh  arq_check_feedback.sh  arq_reader.sh  awk_new_arq_columns.sh  awk_new_deaths.sh  awk_sum_columns.sh  check_arq.sh  covid_bahia_city.sh  get_sh_feedback.sh  logger_usage.sh
cv_studies/1_introduction_openCV_filters/: CMakeLists.txt
cv_studies/1_introduction_openCV_filters/include/: filter_source.hpp
cv_studies/1_introduction_openCV_filters/src/: check_version.cpp  color_remaping.cpp  curve_remapping.cpp  data_input_output.cpp
cv_studies/aula_1/: CMakeLists.txt
dependencies/: install_tools.sh
reference_material/ADE/: FilaLE.h  (+7 more)
(+111 files in other folders)
